# iiac-lawlib-streamlit

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
.streamlit/: config.toml
app/: main.py
app/core/: gemini.py  openai.py
chroma_langchain_db/: chroma.sqlite3
src/: constants.py  core.py  helper.py  main.py
